doc, wacom, polybar, litlle work on sway

--- a/rsc/config/polybar/config
+++ b/rsc/config/polybar/config
@@ -164,14 +164,16 @@ menu-0-0=
 menu-0-0-exec=menu-open-1
 menu-0-1=
 menu-0-1-exec=menu-open-2
-menu-1-0=
-menu-1-0-exec=sleep 0.5; xset dpms force standby
-menu-1-1=
-menu-1-1-exec=sleep 0.5; systemctl suspend
-menu-1-2=
-menu-1-2-exec=sleep 0.5; systemctl poweroff
-menu-1-3=
-menu-1-3-exec=sleep 0.5; systemctl reboot
+menu-1-0=
+menu-1-0-exec=sleep 0.5; bspc quit
+menu-1-1=
+menu-1-1-exec=sleep 0.5; xset dpms force standby
+menu-1-2=
+menu-1-2-exec=sleep 0.5; systemctl suspend
+menu-1-3=
+menu-1-3-exec=sleep 0.5; systemctl poweroff
+menu-1-4=
+menu-1-4-exec=sleep 0.5; systemctl reboot
 menu-2-0=
 menu-2-0-exec=google-chrome-stable &
 menu-2-1=
