few tweaks and docs

--- a/rsc/config/picom/picom.conf
+++ b/rsc/config/picom/picom.conf
@@ -6,17 +6,14 @@ fade-out-step = 0.03;
 fade-exclude  = [];
 
 # opacity
-active-opacity   = 0.93;
-inactive-opacity = 0.93;
-inactive-dim     = 0.0;
-opacity-rule     = ["100:name = 'Picture in picture'","100:name = 'Picture-in-Picture'","85:class_i ?= 'rofi'","80:class_i *= 'discord'","80:class_i *= 'emacs'","80:class_i *= 'Alacritty'","100:fullscreen"];
+active-opacity   = 1.000000;
+inactive-opacity = 1.000000;
+opacity-rule = [ "80:class_i *= 'discord'" , "80:class_i *= 'emacs'" , "80:class_i *= 'Alacritty'" ];
 
 wintypes:
 {
-  dock          = { shadow = false; };
-  dnd           = { shadow = false; };
-  popup_menu    = { opacity = 0.93; };
-  dropdown_menu = { opacity = 0.93; };
+  popup_menu    = { opacity = 1.000000; };
+  dropdown_menu = { opacity = 1.000000; };
 };
 
 # other options
@@ -28,14 +25,6 @@ resize-damage = 1
 refresh-rate = 0;
 corner-radius = 5;
 round-borders = 5;
-
-# Animations
-animations = true;
-animation-window-mass = 0.5;
-animation-for-open-window = "zoom";
-animation-stiffness = 350;
-animation-clamping = false;
-fade-out-step = 1;
 
 detect-rounded-corners = true;
 detect-client-opacity = false;
