--- a/rsc/config/polybar/config.ini
+++ b/rsc/config/polybar/config.ini
@@ -10,6 +10,7 @@ height=15
 module-margin-left=1
 modules-left=logo bspwm
 modules-right=backlight pad memory cpu pad mic sink volume pad battery date
+monitor=HDMI3
 offset-y=2
 padding-right=2
 tray-detached=false
@@ -29,7 +30,7 @@ height=15
 module-margin-left=1
 modules-left=logo bspwm
 modules-right=mic sink volume pad date
-monitor=DisplayPort-1
+monitor=DP1
 offset-y=2
 padding-right=2
 spacing=1.5
@@ -86,7 +87,7 @@ ramp-capacity-4=
 type=internal/battery
 
 [module/bluetooth]
-click-left=/nix/store/fydmm5y9008injfbxdg5mad3h2sqs9dw-blueman-2.2.4/bin/blueman-manager
+click-left=/nix/store/vfg179ld3fpnb6p44jpxiy77rprzzajq-blueman-2.3.2/bin/blueman-manager
 content=
 type=custom/text
 
@@ -174,28 +175,20 @@ menu-1-3=
 menu-1-3-exec=sleep 0.5; systemctl poweroff
 menu-1-4=
 menu-1-4-exec=sleep 0.5; systemctl reboot
-menu-2-0=
-menu-2-0-exec=google-chrome-stable &
-menu-2-1=
-menu-2-1-exec=emacs &
-menu-2-10=
-menu-2-10-exec=steam &
-menu-2-2=
-menu-2-2-exec=libreoffice &
+menu-2-0=
+menu-2-0-exec=alacritty &
+menu-2-1=
+menu-2-1-exec=firefox &
+menu-2-2=
+menu-2-2-exec=emacs &
 menu-2-3=
 menu-2-3-exec=plexmediaplayer &
-menu-2-4=
-menu-2-4-exec=darktable &
-menu-2-5=
-menu-2-5-exec=flatpak run com.obsproject.Studio &
-menu-2-6=
-menu-2-6-exec=gimp &
-menu-2-7=
-menu-2-7-exec=inkscape &
-menu-2-8=
-menu-2-8-exec=kdenlive &
-menu-2-9=
-menu-2-9-exec=lutris &
+menu-2-4=
+menu-2-4-exec=flatpak run com.obsproject.Studio &
+menu-2-5=
+menu-2-5-exec=lutris &
+menu-2-6=
+menu-2-6-exec=steam &
 type=custom/menu
 
 [module/memory]
@@ -233,7 +226,7 @@ label-maxlen=75
 type=internal/xwindow
 
 [module/volume]
-click-right=/nix/store/6h7fkf0hxagi2qkiskmiq4x20mriggap-pavucontrol-5.0/bin/pavucontrol
+click-right=/nix/store/xy4h9zwpsva433vmw7iyxd4hyjp56z4s-pavucontrol-5.0/bin/pavucontrol
 format-volume=<ramp-volume>  <label-volume>
 interval=2
 label-muted=  muted
@@ -243,3 +236,6 @@ ramp-volume-1=
 ramp-volume-2=
 type=internal/pulseaudio
 use-ui-max=false
+
+
+
