home-manager 22.11 syntax update, spell checking, updated documentation

--- a/rsc/config/hypr/hyprland.conf
+++ b/rsc/config/hypr/hyprland.conf
@@ -125,7 +125,7 @@ windowrule=float,^(Rofi)$
 windowrule=float,title:^(Picture-in-Picture)$
 windowrule=float,title:^(Volume Control)$
 
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=Hyprland
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 #exec-once=swaybg -m center -i $HOME/.config/wall
 exec-once=mpvpaper -sf -v -o "--loop --panscan=1" '*' $HOME/.config/wall.mp4
 exec-once=waybar
