--- a/rsc/config/polybar/config.ini
+++ b/rsc/config/polybar/config.ini
@@ -10,7 +10,7 @@ height=15
 module-margin-left=1
 modules-left=logo bspwm
 modules-right=backlight pad memory cpu pad mic sink volume pad battery date
-monitor=HDMI3
+monitor=eDP-1
 offset-y=2
 padding-right=2
 tray-detached=false
@@ -30,7 +30,7 @@ height=15
 module-margin-left=1
 modules-left=logo bspwm
 modules-right=mic sink volume pad date
-monitor=DP1
+monitor=Virtual-1
 offset-y=2
 padding-right=2
 spacing=1.5
