--- a/darwin/modules/kitty/config/kitty.conf
+++ b/darwin/modules/kitty/config/kitty.conf
@@ -102,7 +102,7 @@ font_family      FiraCode Nerd Font Mono
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 14.0
+font_size 16.0
 
 #: Font size (in pts)
 
@@ -1372,7 +1372,7 @@ background_opacity 0.9
 #: builds do not do update checking. Changing this option by reloading
 #: the config is not supported.
 
-# startup_session none
+startup_session ~/.config/kitty/kitty-startup.session
 
 #: Path to a session file to use for all kitty instances. Can be
 #: overridden by using the kitty --session command line option for
