adding all the changes

--- a/darwin/modules/kitty/config/kitty.conf
+++ b/darwin/modules/kitty/config/kitty.conf
@@ -693,7 +693,7 @@ font_size 16.0
 
 #: Terminal bell {{{
 
-# enable_audio_bell yes
+enable_audio_bell false
 
 #: The audio bell. Useful to disable it in environments that require
 #: silence.
