that's a whole lotta stuff

--- a/darwin/modules/kitty/config/kitty.conf
+++ b/darwin/modules/kitty/config/kitty.conf
@@ -88,6 +88,11 @@ font_family      FiraCode Nerd Font Mono
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
+#
+#
+map super+c        copy_to_clipboard
+map super+v        copy_to_clipboard
+map super+f launch --type=overlay --stdin-source=@screen_scrollback /etc/profiles/per-user/chaosinthecrd/bin/fzf --no-sort --no-mouse --exact -i
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
