--- a/rsc/config/hypr/hyprland.conf
+++ b/rsc/config/hypr/hyprland.conf
@@ -1,56 +1,77 @@
-monitor=DP-1,1920x1080@60,0x0,1
-monitor=HDMI-A-3,1920x1080@60,1920x0,1
+monitor=HDMI-A-2,1920x1080@60,1920x0,1
+monitor=HDMI-A-1,1920x1080@60,0x0,1
 
-workspace=HDMI-A-3,1
+workspace=HDMI-A-2,1
+workspace=HDMI-A-2,2
+workspace=HDMI-A-2,3
+workspace=HDMI-A-2,4
+workspace=HDMI-A-1,5
+workspace=HDMI-A-1,6
+workspace=HDMI-A-1,7
+workspace=HDMI-A-1,8
 
-wsbind=1,HDMI-A-3
-wsbind=2,HDMI-A-3
-wsbind=3,HDMI-A-3
-wsbind=4,HDMI-A-3
-wsbind=5,HDMI-A-3
-wsbind=6,DP-1
-wsbind=7,DP-1
-wsbind=8,DP-1
-wsbind=9,DP-1
-wsbind=10,DP-1
+monitor=,highres,auto,auto
 
 general {
-  sensitivity=1
-  main_mod=SUPER
   border_size=3
-  gaps_in=5
-  gaps_out=7
-  col.active_border=0x80ffffff
+  gaps_in=0
+  gaps_out=0
+  col.active_border=0x99005577
   col.inactive_border=0x66333333
   layout=dwindle
 }
 
 decoration {
-  rounding=5
-  multisample_edges=true
+  rounding=0
   active_opacity=0.93
   inactive_opacity=0.93
   fullscreen_opacity=1
-  blur=true
+  blur {
+    enabled=true
+  }
   drop_shadow=false
 }
 
 animations {
-  enabled=true
+  enabled = false
+  bezier = overshot, 0.05, 0.9, 0.1, 1.05
+  bezier = smoothOut, 0.5, 0, 0.99, 0.99
+  bezier = smoothIn, 0.5, -0.5, 0.68, 1.5
+  bezier = rotate,0,0,1,1
+  animation = windows, 1, 4, overshot, slide
+  animation = windowsIn, 1, 2, smoothOut
+  animation = windowsOut, 1, 0.5, smoothOut
+  animation = windowsMove, 1, 3, smoothIn, slide
+  animation = border, 1, 5, default
+  animation = fade, 1, 4, smoothIn
+  animation = fadeDim, 1, 4, smoothIn
+  animation = workspaces, 1, 4, default
+  animation = borderangle, 1, 20, rotate, loop
 }
 
 input {
-  kb_layout=us
-  follow_mouse=1
+  kb_layout=us,us
+  #kb_options=caps:ctrl_modifier
+  kb_variant=,dvorak
+  follow_mouse=2
   repeat_delay=250
   numlock_by_default=1
-  force_no_accel=1
-  sensitivity=1
+  accel_profile=flat
+  sensitivity=0.8
+
 }
 
 dwindle {
   pseudotile=false
   force_split=2
+}
+
+misc {
+  disable_hyprland_logo=true
+  disable_splash_rendering=true
+  mouse_move_enables_dpms=true
+  key_press_enables_dpms=true
+  background_color=0x111111
 }
 
 debug {
@@ -60,16 +81,21 @@ debug {
 bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
 
-bind=SUPER,Return,exec,alacritty
+bind=SUPER,Return,exec,kitty
 bind=SUPER,Q,killactive,
 bind=SUPER,Escape,exit,
-bind=SUPER,E,exec,pcmanfm
+bind=SUPER,S,exec,systemctl suspend
+bind=SUPER,L,exec,swaylock
+bind=SUPER,E,exec,GDK_BACKEND=x11 pcmanfm
 bind=SUPER,H,togglefloating,
-bind=SUPER,Space,exec,rofi -show drun
+#bind=SUPER,Space,exec,rofi -show drun
+bind=SUPER,Space,exec, pkill wofi || wofi --show drun
 bind=SUPER,P,pseudo,
 bind=SUPER,F,fullscreen,
 bind=SUPER,R,forcerendererreload
 bind=SUPERSHIFT,R,exec,hyprctl reload
+bind=SUPER,T,exec,emacsclient -c
+bind=SUPER,K,exec,hyprctl switchxkblayout keychron-k8-keychron-k8 next
 
 bind=SUPER,left,movefocus,l
 bind=SUPER,right,movefocus,r
@@ -107,26 +133,40 @@ bind=ALTSHIFT,0,movetoworkspace,10
 bind=ALTSHIFT,right,movetoworkspace,+1
 bind=ALTSHIFT,left,movetoworkspace,-1
 
-bind=CTRL,right,resizeactive,20 0
-bind=CTRL,left,resizeactive,-20 0
-bind=CTRL,up,resizeactive,0 -20
-bind=CTRL,down,resizeactive,0 20
+#bind=CTRL,right,resizeactive,20 0
+#bind=CTRL,left,resizeactive,-20 0
+#bind=CTRL,up,resizeactive,0 -20
+#bind=CTRL,down,resizeactive,0 20
+
+bind=SUPER,M,submap,resize
+submap=resize
+binde=,right,resizeactive,20 0
+binde=,left,resizeactive,-20 0
+binde=,up,resizeactive,0 -20
+binde=,down,resizeactive,0 20
+bind=,escape,submap,reset
+submap=reset
 
 bind=,print,exec,grim -g "$(slurp)" - | swappy -f - -o ~/Pictures/$(date +%Hh_%Mm_%Ss_%d_%B_%Y).png && notify-send "Saved to ~/Pictures/$(date +%Hh_%Mm_%Ss_%d_%B_%Y).png"
 
 bind=,XF86AudioLowerVolume,exec,pamixer -d 10
 bind=,XF86AudioRaiseVolume,exec,pamixer -i 10
 bind=,XF86AudioMute,exec,pamixer -t
+bind=SUPER_L,c,exec,pamixer --default-source -t
 bind=,XF86AudioMicMute,exec,pamixer --default-source -t
-bind=,XF86MonBrightnessDown,exec,light -U 5
-bind=,XF86MonBrightnessUP,exec,light -A 5
+bind=,XF86MonBrightnessDown,exec,light -U 10
+bind=,XF86MonBrightnessUP,exec,light -A 10
 
-windowrule=float,^(Rofi)$
-windowrule=float,title:^(Picture-in-Picture)$
+#windowrule=float,^(Rofi)$
 windowrule=float,title:^(Volume Control)$
+windowrule=float,title:^(Picture-in-Picture)$
+windowrule=pin,title:^(Picture-in-Picture)$
+windowrule=move 75% 75% ,title:^(Picture-in-Picture)$
+windowrule=size 24% 24% ,title:^(Picture-in-Picture)$
 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-#exec-once=swaybg -m center -i $HOME/.config/wall
-exec-once=mpvpaper -sf -v -o "--loop --panscan=1" '*' $HOME/.config/wall.mp4
 exec-once=waybar
+exec-once=eww daemon
+#exec-once=$HOME/.config/eww/scripts/eww        # When running eww as a bar
 exec-once=blueman-applet
+exec-once=swayidle -w timeout 600 'swaylock -f' timeout 1200 'systemctl suspend' after-resume 'hyprctl dispatch dpms on' before-sleep 'swaylock -f && hyprctl dispatch dpms off'
