--- a/rsc/config/waybar/config
+++ b/rsc/config/waybar/config
@@ -1,5 +1,15 @@
 [
   {
+    "backlight": {
+      "device": "intel_backlight",
+      "format": "{percent}% <span font='11'>{icon}</span>",
+      "format-icons": [
+        "",
+        ""
+      ],
+      "on-scroll-down": "light -U 5",
+      "on-scroll-up": "light -A 5"
+    },
     "battery": {
       "format": "{capacity}% <span font='11'>{icon}</span>",
       "format-charging": "{capacity}% <span font='11'></span>",
@@ -18,26 +28,43 @@
       }
     },
     "clock": {
-      "format": "{:%b %d %H:%M}",
-      "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
+      "format": "{:%b %d %H:%M}  ",
+      "on-click": "eww open --toggle calendar --screen 0"
     },
     "cpu": {
-      "format": "{usage}% <span font='11'></span>",
+      "format": " {usage}% <span font='11'></span> ",
       "interval": 1
+    },
+    "custom/ds4": {
+      "exec": "$HOME/.config/waybar/script/ds4.sh",
+      "format": "{}",
+      "interval": 60
+    },
+    "custom/kb": {
+      "exec": "$HOME/.config/waybar/script/kb.sh",
+      "format": "{}",
+      "interval": 60
     },
     "custom/menu": {
       "format": "<span font='16'></span>",
-      "on-click": "/nix/store/ji6385q5iy4357wchvyshhyrazj7yj4h-rofi-1.7.5/bin/rofi -show p -modi p:/nix/store/ahdq42jlka94bqg7w9i8b0j8iyssd96i-rofi-power-menu-3.0.2/bin/rofi-power-menu -theme $HOME/.config/rofi/config.rasi",
-      "on-click-right": "/nix/store/ji6385q5iy4357wchvyshhyrazj7yj4h-rofi-1.7.5/bin/rofi -show drun",
+      "on-click": ".config/wofi/power.sh",
+      "on-click-right": "wofi --show drun",
       "tooltip": false
     },
+    "custom/mouse": {
+      "exec": "$HOME/.config/waybar/script/mouse.sh",
+      "format": "{}",
+      "interval": 60
+    },
     "custom/pad": {
-      "format": " ",
+      "format": "      ",
       "tooltip": false
     },
     "custom/sink": {
-      "format": "<span font='9'>蓼</span>",
-      "on-click": "$HOME/.config/waybar/script/sink.sh",
+      "exec": "$HOME/.config/waybar/script/sink.sh",
+      "format": "{}",
+      "interval": 2,
+      "on-click": "$HOME/.config/waybar/script/switch.sh",
       "tooltip": false
     },
     "disk": {
@@ -45,7 +72,10 @@
       "interval": 30,
       "path": "/"
     },
-    "height": 16,
+    "height": 27,
+    "hyprland/workspaces": {
+      "format": "<span font='11'>{name}</span>"
+    },
     "layer": "top",
     "memory": {
       "format": "{}% <span font='11'></span>",
@@ -54,9 +84,13 @@
     "modules-center": [],
     "modules-left": [
       "custom/menu",
-      "wlr/workspaces"
+      "hyprland/workspaces"
     ],
     "modules-right": [
+      "custom/ds4",
+      "custom/mouse",
+      "custom/kb",
+      "custom/pad",
       "network",
       "cpu",
       "memory",
@@ -68,20 +102,21 @@
       "tray"
     ],
     "network": {
-      "format-disconnected": "<span font='11'>睊</span> Not connected",
-      "format-ethernet": "<span font='11'></span>",
-      "format-linked": "<span font='11'>睊</span> {ifname} (No IP)",
+      "format-disconnected": "<span font='11'>󱘖</span> Not connected",
+      "format-ethernet": "<span font='11'>󰈀</span>",
+      "format-linked": "<span font='11'>󱘖</span> {ifname} (No IP)",
       "format-wifi": "<span font='11'></span>",
       "tooltip-format": "{essid} {ipaddr}/{cidr}"
     },
     "output": [
-      "HDMI-A-3"
+      "HDMI-A-2",
+      "HDMI-A-1"
     ],
     "position": "top",
     "pulseaudio": {
-      "format": "<span font='11'>{icon}</span> {volume}% {format_source}",
-      "format-bluetooth": "<span font='11'>{icon}</span> {volume}% {format_source}",
-      "format-bluetooth-muted": "<span font='11'></span> {volume}% {format_source}",
+      "format": "<span font='11'>{icon}</span> {volume}% {format_source} ",
+      "format-bluetooth": "<span font='11'>{icon}</span> {volume}% {format_source} ",
+      "format-bluetooth-muted": "<span font='11'>x</span> {volume}% {format_source} ",
       "format-icons": {
         "default": [
           "",
@@ -90,9 +125,9 @@
         ],
         "headphone": ""
       },
-      "format-muted": "<span font='11'></span> {format_source}",
-      "format-source": "<span font='10'></span>",
-      "format-source-muted": "<span font='11'></span>",
+      "format-muted": "<span font='11'>x</span> {volume}% {format_source} ",
+      "format-source": "<span font='10'></span> ",
+      "format-source-muted": "<span font='11'> </span> ",
       "on-click": "pamixer -t",
       "on-click-middle": "pavucontrol",
       "on-click-right": "pamixer --default-source -t",
@@ -100,7 +135,7 @@
     },
     "sway/workspaces": {
       "all-outputs": true,
-      "format": "<span font='11'>{icon}</span>",
+      "format": "<span font='12'>{icon}</span>",
       "format-icons": {
         "1": "",
         "2": "",
@@ -124,69 +159,6 @@
       "active-only": false,
       "format": "<span font='11'>{name}</span>",
       "on-click": "activate"
-    }
-  },
-  {
-    "clock": {
-      "format": "{:%b %d %H:%M}",
-      "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
-    },
-    "custom/menu": {
-      "format": "<span font='16'></span>",
-      "on-click": "/nix/store/ji6385q5iy4357wchvyshhyrazj7yj4h-rofi-1.7.5/bin/rofi -show p -modi p:/nix/store/ahdq42jlka94bqg7w9i8b0j8iyssd96i-rofi-power-menu-3.0.2/bin/rofi-power-menu -theme $HOME/.config/rofi/config.rasi",
-      "on-click-right": "/nix/store/ji6385q5iy4357wchvyshhyrazj7yj4h-rofi-1.7.5/bin/rofi -show drun",
-      "tooltip": false
-    },
-    "custom/pad": {
-      "format": " ",
-      "tooltip": false
-    },
-    "custom/sink": {
-      "format": "<span font='10'>蓼</span>",
-      "on-click": "$HOME/.config/waybar/script/sink.sh",
-      "tooltip": false
-    },
-    "height": 16,
-    "layer": "top",
-    "modules-center": [],
-    "modules-left": [
-      "custom/menu",
-      "wlr/workspaces"
-    ],
-    "modules-right": [
-      "pulseaudio",
-      "custom/sink",
-      "custom/pad",
-      "clock"
-    ],
-    "output": [
-      "DP-1"
-    ],
-    "position": "top",
-    "pulseaudio": {
-      "format": "<span font='11'>{icon}</span> {volume}% {format_source}",
-      "format-bluetooth": "<span font='11'>{icon}</span> {volume}% {format_source}",
-      "format-bluetooth-muted": "<span font='11'></span> {volume}% {format_source}",
-      "format-icons": {
-        "default": [
-          "",
-          "",
-          ""
-        ],
-        "headphone": ""
-      },
-      "format-muted": "<span font='11'></span> {format_source}",
-      "format-source": "<span font='10'></span>",
-      "format-source-muted": "<span font='11'></span>",
-      "on-click": "pamixer -t",
-      "on-click-middle": "pavucontrol",
-      "on-click-right": "pamixer --default-source -t",
-      "tooltip-format": "{desc}, {volume}%"
-    },
-    "wlr/workspaces": {
-      "active-only": false,
-      "format": "<span font='11'>{name}</span>",
-      "on-click": "activate",
     }
   }
 ]
